part1/exercise-1.11/manifests/ping-pong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: log-output-claim
      containers:
        - name: ping-pong
          image: warchest77/ping-pong:v0.4
          volumeMounts:
          - name: shared-files
            mountPath: /files
